--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 .container {
   display: grid;
   min-height: 100vh;
-  background: #394240;
+  background: #1e293b;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 150px 1fr 100px;
   grid-template-areas:
@@ -17,7 +17,7 @@ body {
 }
 
 .container header {
-  background: #394240;
+  background: #1e293b;
   grid-area: header;
   display: flex;
   justify-content: center;
@@ -29,13 +29,13 @@ body {
 
 .container main {
   grid-area: main;
-  background: linear-gradient(rgba(18, 41, 156, 1), rgba(2, 0, 9, 1));
+  background: #334155;
   margin-top: 30px;
 }
 
 .container footer {
   grid-area: footer;
-  background: #394240;
+  background: #1e293b;
 }
 
 h1 {
@@ -55,7 +55,7 @@ input[type="text"] {
 }
 
 button {
-  background: #3498db;
+  background: #598ef3;
   cursor: pointer;
   border: none;
   padding: 10px 20px;
@@ -85,7 +85,9 @@ button {
 #dataWeather h2,
 #dataWeather p,
 #dataWeather img {
-  border: 1px solid #e9e9e9;
+  background: #2563eb;
+  color: #cbd5e1;
+  border: 1px solid #fae8ff;
   border-radius: 8px;
   padding: 10px;
   width: 100%;
